.provarCaches/00D6C0000000xA6UAI/objects/ccrz__E_TaxRate__c.object
<CustomObject>
    <description>Tax Rate.</description>
    <fields>
        <fullName>ccrz__CountryCode__c</fullName>
        <description>Country Code</description>
        <label>Country Code</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__StateCode__c</fullName>
        <description>State Code</description>
        <label>State Code</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__TaxRateId__c</fullName>
        <description>Tax Rate ID</description>
        <externalId>true</externalId>
        <label>Tax Rate Id</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__TaxRate__c</fullName>
        <description>Tax Rate</description>
        <label>Tax Rate</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <label>CC Tax Rate</label>
    <listViews>
        <fullName>ccrz__All</fullName>
        <columns>NAME</columns>
        <columns>ccrz__TaxRateId__c</columns>
        <columns>ccrz__TaxRate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Tax Rate Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Tax Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>